Added multiple cursors module.

--- a/config.org
+++ b/config.org
@@ -43,6 +43,8 @@
         - [[#file-templates][file-templates]]
         - [[#fold][fold]]
         - [[#lispy][lispy]]
+        - [[#multiple-cursors][Multiple cursors]]
+        - [[#parinfer][parinfer]]
         - [[#snippets][snippets]]
         - [[#word-wrap][word-wrap]]
       - [[#emacs][:emacs]]
@@ -793,6 +795,39 @@ work with =lispyville='s commands. Bummer.
        lispy             ; vim for lisp, for people who don't like vim
 #+end_src
 
+
+***** Multiple cursors
+
+This module add =evil-mc= and more importantly, the awesome =evil-multiedit=, which can save a bit of time when editing multiple occurrences of text in a file.
+
+#+begin_src elisp :tangle init.el
+       multiple-cursors    ; editing in many places at once
+#+end_src
+
+***** parinfer
+
+#+begin_quote
+Parinfer is a proof-of-concept editor mode for Lisp programming languages. It
+will infer some changes to keep Parens and Indentation inline with one another.
+
+https://raw.githubusercontent.com/DogLooksGood/parinfer/a7c041454e05ec2b88333a73e72debaa671ed596/images/demo.gif
+#+end_quote
+
+Basically, it's a another editing helper package for lisp, in particular:
+
+- Emacs Lisp
+- Clojure
+- Scheme
+- Lisp
+- Racket
+- Hy
+
+#+begin_src elisp :tangle init.el
+       ;;objed               ; text object editing for the innocent
+       (parinfer +rust)      ; turn lisp into python, sort of
+#+end_src
+
+
 ***** snippets
 
 #+begin_quote
@@ -800,9 +835,6 @@ This module adds snippets to Emacs, powered by yasnippet.
 #+end_quote
 
 #+begin_src elisp :tangle init.el
-       ;;multiple-cursors    ; editing in many places at once
-       ;;objed               ; text object editing for the innocent
-       ;;parinfer              ; turn lisp into python, sort of
        ;;rotate-text     ; cycle region at point between text candidates
        snippets          ; my elves. They type so I don't have to
 #+end_src
