--- a/config.org
+++ b/config.org
@@ -1,4 +1,4 @@
-# -*- eval: (writeroom-mode +1); -*-
+# -*- eval: (when (fboundp writeroom) writeroom-mode +1); -*-
 
 #+TITLE: Dan's DOOM Emacs configuration
 #+OPTIONS: tags:nil todo:nil
@@ -1938,7 +1938,7 @@ Keybinding to easily find the feeds file.
 
 *** Rust
 
-Seems like =rls= is more stable than rust-analyzer.
+Use =rust-analyzer= by default, since it has more features.
 
 #+begin_src elisp
 (use-package! rustic
